# web-note-pad

./: .docker.env  .docker.env.example  .env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  docker-compose.yaml  docker-compose.yml  dsdsa.sh  main.py  vetur.config.js
OLD/: Readme.md  docker-compose.yaml  package-lock.json
OLD2/: .gitignore  Makefile  docker-compose.yaml  tmp.py
OLD2/backend/: pyproject.toml
OLD2/backend/migrations/models/: 2_20220426122038_update.sql
OLD2/backend/src/database/: register.py
OLD2/backend/src/routes/: users.py
OLD2/backend/src/schemas/: token.py
OLD2/frontend/: Dockerfile  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 013930b07581_test_notes.py  020222149eb3_author_not_null.py  08fabd76eff3_test.py  22f84acf4b4c_init_db.py  2685b5e3b077_add_password2.py  26beb7b9d22f_test.py  43ddf6574e0e_.py  855d6d5b7667_rename_password.py  9f74cf1c639a_init.py  b77fd056b1a0_remove_password.py  cfb301c27996_test_notes2.py
backend/src/: main.py  models.py  settings.py
backend/src/auth/: jwthandler.py  users.py
backend/src/crud/: users.py
backend/src/database/: config.py  models.py  register.py
backend/src/internal/auth/: jwthandler.py  users.py
backend/src/models/: __init__.py  base.py  database.py  notes.py  users.py
backend/src/repositories/: base.py  notes.py  users.py
backend/src/routers/: base.py  notes.py  root.py  users.py
backend/src/routers/api/v1/: notes.py  users.py
backend/src/routers/v1/: notes.py  users.py
backend/src/routes/: users.py
backend/src/schemas/: base.py  notes.py  token.py  users.py
backend/src/scripts/: test_insert_users.py
backend/src/services/: notes.py  users.py
env/: docker.env  local.env
frontend/: Dockerfile  package-lock.json  package.json
src/backend/: Makefile  alembic.ini  pyproject.toml
src/backend/app/: logger.py  main.py  settings.py
src/backend/app/constants/: auth.py
src/backend/app/dependencies/: __init__.py  auth.py  common.py
src/backend/app/dependencies/clients/: db_session.py
src/backend/app/dependencies/service_dependencies/: auth_service_factory.py  note_services_factory.py  user_services_factory.py
src/backend/app/dependencies/uow_dependencies/: note_uow_factory.py  user_uow_factory.py
src/backend/app/dto/: auth.py  base.py  notes.py  user.py  users.py
src/backend/app/exceptions/: auth.py  base.py  error_handlers.py  main.py  notes.py  user.py
src/backend/app/middleware/: base.py
src/backend/app/models/: base.py  mixins.py  notes.py  users.py
src/backend/app/repositories/: base.py  notes.py  user.py  users.py
src/backend/app/routers/: main.py
src/backend/app/routers/api/v1/: __init__.py  notes.py  user.py  users.py
src/backend/app/schemas/request/: base.py  notes.py  types.py  user.py
src/backend/app/schemas/response/: auth.py  base.py  notes.py  user.py  users.py
src/backend/app/services/: auth.py  notes.py  user.py  users.py
src/backend/app/uow/: base.py  notes.py  user.py  users.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 2024-01-22_17-57_init_tables.py  2024-02-05_19-42_add_uniq_username.py  2024-03-09_20-55_init.py  2024-07-24_18-44_test.py
(+48 files in other folders)
