# ./backend/pyproject.toml

[tool.poetry]
name = "web-notepad-backend"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <orlov.avis@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
tortoise-orm = "^0.19.0"
aerich = "^0.6.3"
asyncpg = "^0.25.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}


[tool.aerich]
tortoise_orm = "src.database.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
