[tool.poetry]
name = "web-note-pad"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]
readme = "README.md"
packages = [{include = "web_note_pad"}]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
orjson = "^3.9.12"
passlib = "^1.7.4"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
bandit = "^1.7.7"
mypy = "^1.8.0"
flake8-bandit = "^4.1.1"
flake8-print = "^5.0.0"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.1.17"
flake8-commas = "^2.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
